--- a/1. html structure/index.html
+++ b/1. html structure/index.html
@@ -5,5 +5,8 @@
     </head>
     <body>
         <!-- Content Here -->
+        <!-- setiap tag selalu diikuti tag pembuka dan penutup -->
+        <!-- contoh tag pembuka -> "<body>" -->
+        <!-- contoh tag penutup -> "</body>" diber garis miring atau slash sebelum nama tag -->
     </body>
 </html>
