--- a/3. html heading/index.html
+++ b/3. html heading/index.html
@@ -1,17 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Heading</title>
-</head>
-<body>
-  <h1>hello world!</h1>
-  <h2>hello world!</h2>
-  <h3>hello world!</h3>
-  <h4>hello world!</h4>
-  <h5>hello world!</h5>
-  <h6>hello world!</h6>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <title>Heading</title>
+    </head>
+    <body>
+        <!-- untuk membuat heading menggunakan tag h1 sampai h6 -->
+        <!-- semakin besar tag heading nya text yang ditampilkan semakin kecil -->
+        <h1>hello world!</h1>
+        <h2>hello world!</h2>
+        <h3>hello world!</h3>
+        <h4>hello world!</h4>
+        <h5>hello world!</h5>
+        <h6>hello world!</h6>
+    </body>
 </html>
