--- a/4. html list/index.html
+++ b/4. html list/index.html
@@ -7,25 +7,29 @@
         <title>list</title>
     </head>
     <body>
-        <ol type="I">
+        <!-- untuk membuat list menggunaka tag ol(ordered list), ul(unordered list), ataupun dl-->
+
+        <!-- atribut type pada tag ol -> a, A, i, I. Defaultnya adalah urutan angka dari 1 sampai seterusnya -->
+        <ol type="">
             <li>step 1</li>
             <li>step 2</li>
             <li>step 3</li>
         </ol>
-
+        
+        <!-- atribut pada tag ul -> square, disc, circle. Defaultnya adalah circle -->
         <ul type="square">
             <li>nasgor</li>
             <li>seblak</li>
             <li>bakwan</li>
         </ul>
-        
-        <dl>
+
+        <!--         <dl>
           <dt>html</dt>
           <dd>hyper text markup languange</dd>
         </dl>
         <dl>
           <dt>css</dt>
           <dd>cascading style sheet</dd>
-        </dl>
+        </dl> -->
     </body>
 </html>
