--- a/5. html hyperlink/index1.html
+++ b/5. html hyperlink/index1.html
@@ -7,7 +7,20 @@
         <title>Document</title>
     </head>
     <body>
-        <p>klik <a href="https://www.google.com">disini</a> untuk pindah ke google</p>
-        <p>klik <a href="index2.html">disini</a>untuk pindah ke halaman dua</p>
+        <!-- untuk membuat hyperlink menggunakan tag a lalu diikuti atribut href dan valuenya adalah link yang mau dituju -->
+
+        <!-- dibawah ini contoh penerapan hyperlink dengan external link -->
+        <p>
+            klik
+            <a href="https://www.google.com">disini</a>
+            untuk pindah ke google
+        </p>
+
+        <!-- dibawah ini contoh penerapan hyperlink dengan internal link atau relative url -->
+        <p>
+            klik
+            <a href="index2.html">disini</a>
+            untuk pindah ke halaman dua
+        </p>
     </body>
 </html>
