--- a/7. html table/index.html
+++ b/7. html table/index.html
@@ -7,8 +7,19 @@
         <title>table</title>
     </head>
     <body>
+        <!-- untuk membuat table diperlukan tag table -->
+
+        <!-- atribut align untuk mengatur posisi text atau tabel -->
+
+        <!-- atribut border untuk membuat sebuah border atau kotak pada tabel -->
+
+        <!-- atribut cellpadding untuk mengatur jarak antar cell tetapi didalamnya -->
+
+        <!-- atribut cellspacing digunakan untuk mengatur jarak antara cell satu dengan cell lainnya -->
         <table align="center" border="1" cellpadding="20" cellspacing="0">
+            <!-- membuat baris pada tabel menggunakan tag tr -->
             <tr>
+                <!-- tag th adalah membuat data di dalam baris dengan format text tebal biasanya dikenal dengan judul -->
                 <th></th>
                 <th>A</th>
                 <th>B</th>
@@ -18,6 +29,7 @@
             </tr>
             <tr>
                 <th>1</th>
+                <!-- tag td sama seperti th perbedaanya biasa digunakan untuk nama data  -->
                 <td></td>
                 <td></td>
                 <td></td>
@@ -52,6 +64,9 @@
         <br />
         <table align="center" border="1" cellpadding="10" cellspacing="0">
             <tr>
+              <!-- atribut colspan digunakan untuk menggabunkan kolom -->
+              
+              <!-- atribut rowspan digunakan untuk menggabungkan baris -->
                 <td rowspan="3">rowspan</td>
                 <td colspan="2">colspan</td>
             </tr>
