--- a/8. html form/index.html
+++ b/8. html form/index.html
@@ -7,7 +7,9 @@
         <title>form</title>
     </head>
     <body>
-        <form action="">
+        <!-- untuk membuat form diperlukan tag form -->
+        <form>
+            <!-- tag label digunakan untuk membuat nama sebelum imputan -->
             <label for="username">username</label>
             <input type="text" name="username" id="username" />
             <br />
