--- a/2. html paragraf/index.html
+++ b/2. html paragraf/index.html
@@ -7,6 +7,7 @@
         <title>paragraf</title>
     </head>
     <body>
+        <!-- untuk membuat paragraf diperlukan tag p -->
         <p>Ini adalah paragraf 1</p>
         <p>Ini adalah paragraf 2</p>
         <p>
